# oeamdb

./: .copier-answers.yml  .gitignore  LICENSE  MANIFEST.in  README.md  project_setup.md  pyproject.toml
.github/workflows/: build.yml  next_steps.yml  publish.yml
scripts/: data_exploration.py  stats.py
src/oeamdb/: __init__.py  basg_dl.py  downloaders.py  my_module.py  oeamdb.py  sql_adapters.py  sql_model.py  stats.py
src/oeamdb/data/: atc_corr.json
tests/: conftest.py  test_1_downloads.py  test_2_databases.py  test_3_chembl.py  test_4_atc.py  test_4_extras.py  test_databases.py  test_downloads.py  test_my_module.py
tests/test_data/: category.json  course_material.json
