# see documentation, e.g.
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://www.python.org/dev/peps/pep-0621/

[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "William Schueller", email = "william.schueller@gmail.com" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "psycopg",
    "asyncpg",
    "sqlalchemy",
    "playwright",
    "python-levenshtein",
    "xxhash",
    "polars",
    "pubchempy",
    "geopy",
    "beautifulsoup4",
    "requests",
    "pymupdf4llm",
]
description = "Gathering official pharmaceutical products list for Austria, enriched with relevant data."
keywords = ["arzneimittel","austria","pharmacy","medical"]
license = {file = "LICENSE"}
name = "oeamdb"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
version = "0.1.0"

[dependency-groups]
dev = [
    "build",  # build is not only used in publishing (below), but also in the template's test suite
    "bump-my-version",
    "coverage [toml]",
    "pytest",
    "pytest-cov",
    "ruff",
    "tox",
    "myst_parser",
    
]
publishing = [
    "build",
    "twine",
    "wheel",
]

[project.urls]
Repository = "https://github.com/wschuell/oeamdb"
Issues = "https://github.com/wschuell/oeamdb/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.coverage.run]
branch = true
source = ["src/oeamdb"]
command_line = "-m pytest"

[tool.tox]
requires = ["tox>=4.22"]
env_list = [ "py310", "py311", "py312" ]
skip_missing_interpreters = true
[tool.box.testenv]
description = "Run test under {base_python}"
commands = [["pytest"]]
[tool.tox.env_run_base]
dependency_groups = [ "dev" ]

[tool.ruff]
line-length = 79
output-format = "concise"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable Pyflakes `E` and `F` codes by default.
select = ["ALL"]
ignore = [
    "ANN204", # Missing return type annotation for special (dunder) method
    "FBT",    # Using boolean function arguments
    "TD",     # TODOs
    "FIX001", # Resolve FIXMEs
    "FIX002", # Resolve TODOs
    "B028",   # No explicit `stacklevel` keyword argument found in warning
    "COM812", # Trailing commas are taken care of by `ruff format`
    # No docstrings required in the following cases
    "D100", # Missing module docstring
    "D104", # Missing public package docstring
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "PT011",  # Missing `match` parameter in `pytest.raises()`
    "S101",   # Use of assert is detected
]

[tool.ruff.lint.isort]
known-first-party = ["oeamdb"]
force-single-line = true
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]



[tool.bumpversion]
current_version = "0.1.0"

[[tool.bumpversion.files]]
filename = "src/oeamdb/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"




